--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -4,9 +4,13 @@ jobs:
   phpstan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: php-actions/composer@v2
-      - name: PHPStan Static Analysis
-        uses: dingo-d/phpstan-wp-action@v1
-        with:
-          configuration: ./phpstan.neon
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 7.4
+    - name: Install Composer Dependencies
+      run: composer install
+    - name: Run PHPStan
+      run: phpstan analyze
