--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -13,4 +13,4 @@ jobs:
     - name: Install Composer Dependencies
       run: composer install
     - name: Run PHPStan
-      run: phpstan analyze
+      run: vendor/bin/phpstan analyse
