add analyse script for php codesniffer

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,14 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "@stan"
+            "@stan",
+            "@phpcs"
         ],
         "stan": [
             "vendor/bin/phpstan analyse --memory-limit=-1"
+        ],
+        "phpcs": [
+            "phpcs -s --ignore=*/vendor/*,*/lib/*,*/.github/* ./"
         ]
     }
 }
