--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,15 @@
 {
+    "name": "ilovepdf/ilovepdf-wp",
+    "description": "iLovePDF Wordpress Plugin",
+    "type": "wordpress-plugin",
+    "homepage": "https://ilovepdf.com/",
+    "license": "GPL-2.0-or-later",
+    "authors": [
+        {
+            "name": "ilovepdf",
+            "email": "info@ilovepdf.com"
+        }
+    ],
     "require-dev": {
         "phpstan/phpstan": "^1.10",
         "szepeviktor/phpstan-wordpress": "^1.3",
