--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,16 @@
             "email": "info@ilovepdf.com"
         }
     ],
+    "require": {
+        "ilovepdf/ilovepdf-php": "^1.2"
+    },
     "require-dev": {
         "phpstan/phpstan": "^1.10",
         "szepeviktor/phpstan-wordpress": "^1.3",
         "phpstan/extension-installer": "^1.3"
     },
     "config": {
+        "vendor-dir": "lib",
         "allow-plugins": {
             "phpstan/extension-installer": true
         }
@@ -24,16 +28,20 @@
         "post-install-cmd": [
             "@stan",
             "@phpcs",
-            "@phpcbf"
+            "@phpcbf",
+            "@autoload-dev",
+            "@autoload-prod"
         ],
-        "stan": [
-            "vendor/bin/phpstan analyse --memory-limit=-1 --error-format=table > ../../../phpstan-report-ilovepdf.txt"
-        ],
-        "phpcs": [
-            "phpcs -s --ignore=*/vendor/*,*/lib/*,*/.github/* --report-file=../../../condesniffer-report-ilovepdf.txt ./"
-        ],
-        "phpcbf": [
-            "phpcbf --ignore=vendor/,lib/,.github/ ./"
-        ]
+        "stan": "lib/bin/phpstan analyse --memory-limit=-1 --error-format=table > ../../../phpstan-report-ilovepdf.txt",
+        "phpcs": "phpcs -s --ignore=*/vendor/*,*/lib/*,*/.github/* --report-file=../../../condesniffer-report-ilovepdf.txt ./",
+        "phpcbf": "phpcbf --ignore=vendor/,lib/,.github/ ./",
+        "autoload-dev": "composer dump-autoload",
+        "autoload-prod": "composer dump-autoload --no-dev"
+    },
+    "autoload": {
+        "psr-4": {
+            "Ilove_Pdf_Admin\\": "admin",
+            "Ilove_Pdf_Includes\\": "includes"
+        }
     }
 }
