--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -15,4 +15,4 @@ jobs:
         composer install
         composer dump-autoload
     - name: Run PHPStan
-      run: lib/bin/phpstan analyse
+      run: vendor/bin/phpstan analyse
