--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,12 @@
         "phpstan/extension-installer": "^1.3"
     },
     "config": {
-        "vendor-dir": "lib",
         "allow-plugins": {
             "phpstan/extension-installer": true
         }
     },
     "scripts": {
-        "stan": "lib/bin/phpstan analyse --memory-limit=-1 --error-format=table > ../../../phpstan-report-ilovepdf.txt",
+        "stan": "vendor/bin/phpstan analyse --memory-limit=-1 --error-format=table > ../../../phpstan-report-ilovepdf.txt",
         "phpcs": "phpcs -s --ignore=*/vendor/*,*/lib/*,*/.github/* --report-file=../../../condesniffer-report-ilovepdf.txt ./",
         "phpcbf": "phpcbf --ignore=vendor/,lib/,.github/ ./",
         "autoload-dev": "composer dump-autoload",
