--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,4 @@
 parameters:
-	bootstrapFiles:
-		- lib/autoload.php
 	level: 5
 	paths:
 			- ./
@@ -9,4 +7,4 @@ parameters:
 					- vendor
 					- node_modules
 			analyse:
-					- lib
+					- vendor/ilovepdf
