--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": ">=7.4",
         "ilovepdf/ilovepdf-php": "^1.2"
     },
     "require-dev": {
@@ -19,6 +20,7 @@
         "phpstan/extension-installer": "^1.3"
     },
     "config": {
+        "platform-check": false,
         "allow-plugins": {
             "phpstan/extension-installer": true
         }
