--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "scripts": {
         "stan": "vendor/bin/phpstan analyse --memory-limit=-1 --error-format=table > ../../../phpstan-report-ilovepdf.txt",
-        "phpcs": "phpcs -s --ignore=*/node_modules/*,*/vendor/*,*/.github/* --report-file=../../../condesniffer-report-ilovepdf.txt ./",
+        "phpcs": "phpcs -s --ignore=*/node_modules/*,*/vendor/*,*/.github/*,*/assets/js/*,*/assets/css/* --report-file=../../../condesniffer-report-ilovepdf.txt ./",
         "phpcbf": "phpcbf --ignore=node_modules/,vendor/,.github/ ./",
         "autoload-dev": "composer dump-autoload",
         "autoload-prod": "composer dump-autoload --no-dev"
