change reports file

--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         }
     },
     "scripts": {
-        "stan": "vendor/bin/phpstan analyse --memory-limit=-1 --error-format=table > ../../../phpstan-report-ilovepdf.txt",
-        "phpcs": "phpcs -s --ignore=*/node_modules/*,*/vendor/*,*/.github/*,*/assets/js/*,*/assets/css/* --report-file=../../../condesniffer-report-ilovepdf.txt ./",
+        "stan": "vendor/bin/phpstan analyse --memory-limit=-1 --error-format=table > ./phpstan-report-ilovepdf.log",
+        "phpcs": "phpcs -s --ignore=*/node_modules/*,*/vendor/*,*/.github/*,*/assets/js/*,*/assets/css/* --report-file=./condesniffer-report-ilovepdf.log ./",
         "phpcbf": "phpcbf --ignore=node_modules/,vendor/,assets/js/,assets/css/,.github/ ./",
         "autoload-dev": "composer dump-autoload",
         "autoload-prod": "composer dump-autoload --no-dev"
