--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
     "require-dev": {
         "phpstan/phpstan": "^1.12",
         "szepeviktor/phpstan-wordpress": "^1.3",
-        "phpstan/extension-installer": "^1.4"
+        "phpstan/extension-installer": "^1.4",
+        "wp-coding-standards/wpcs": "^3.0"
     },
     "config": {
         "platform-check": false,
         "allow-plugins": {
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "scripts": {
