--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,6 +8,6 @@ parameters:
 	excludePaths:
 			analyseAndScan:
 					- vendor
-					- node_modules
+					- node_modules?
 			analyse:
 					- vendor/ilovepdf
