--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "Compress your PDF files and Stamp Images or text into PDF files. This is the Official iLovePDF plugin for WordPress. You can optimize all your PDF and stamp them automatically as you do in ilovepdf.com.",
   "main": "index.js",
   "scripts": {
-    "dev": "gulp"
+    "dev": "NODE_ENV='development' gulp",
+    "build": "NODE_ENV='production' gulp"
   },
   "author": "ilovepdf",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
+    "@babel/core": "^7.26",
+    "@babel/preset-env": "^7.26",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^9.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^6.0.0",
+    "gulp-sass": "^6.0.1",
     "gulp-uglify": "^3.0.2",
     "merge-stream": "^2.0.0",
-    "sass": "^1.84"
+    "sass": "^1.85"
   }
 }
